# SimpleSocialAuthLib

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release_to_pypi.yml
examples/flask_app/: .gitignore  app.py  pyproject.toml
examples/flask_app/templates/: index.html  success.html
examples/flask_app/templates/components/: flash.html  github.html  google.html
requirements/: base.txt  lint.txt
simplesocialauthlib/: abstract.py  config.py  exceptions.py  types.py  utils.py
simplesocialauthlib/providers/: github.py  google.py
src/simplesocialauthlib/: abstract.py  exceptions.py  types.py  utils.py
src/simplesocialauthlib/providers/: __init__.py  github.py  google.py
tests/: test_github_auth.py  test_google_auth.py
