[project]
name = "SimpleSocialAuthLib"
dynamic = ["version"]
description = "SimpleSocialAuthLib is a lightweight and easy-to-use Python library that simplifies OAuth2 authentication integration with social providers such as Google, GitHub, Facebook, Twitter, and more."
authors = [
    {name = "Macktireh", email = "abdimack97@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.147.0",
    "requests-oauthlib>=2.0.0",
]


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/simplesocialauthlib/__init__.py"

[tool.pdm.dev-dependencies]
lint = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.7",
    "types-requests>=2.32.0.20240914",
]
test = [
    "pytest>=8.3.3",
]


[tool.pdm.scripts]
ruff = "ruff check --fix"
precommit = "pre-commit run --all-files"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tuna"

[[tool.pdm.source]]
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
name = "sjtug"


[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 130
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
