[project]
name = "SimpleSocialAuthLib"
dynamic = ["version"]
description = "SimpleSocialAuthLib is a Python library designed to simplify social authentication for various providers. It offers a straightforward interface for handling OAuth2 flows and retrieving user data from popular social platforms."
authors = [
    {name = "Macktireh", email = "abdimack97@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries"
]
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.147.0",
    "requests-oauthlib>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Macktireh/SimpleSocialAuthLib"
Documentation = "https://github.com/Macktireh/SimpleSocialAuthLib#readme"
Repository = "https://github.com/Macktireh/SimpleSocialAuthLib"
Issues = "https://github.com/Macktireh/SimpleSocialAuthLib/issues"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.7",
]
test = [
    "pytest>=8.3.3",
]


[tool.pdm.scripts]
ruff = "ruff check --fix"
precommit = "pre-commit run --all-files"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tuna"

[[tool.pdm.source]]
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
name = "sjtug"


[tool.ruff]
line-length = 130
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
